--- a/MT5/Minitarea5.ipynb
+++ b/MT5/Minitarea5.ipynb
@@ -24,6 +24,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "cells": [
@@ -126,7 +135,14 @@
    "source": [
     "**Pregunta 2**: Explique cuales son las diferencias entre las tres arquitecturas de sequence to sequence vistas en clases (Encoder-Decoder con RNN, Encoder-Decoder con RNN y Attention, y el Transformer) (1,5 puntos)\n",
     "\n",
-    "**Respuesta**:"
+    "**Respuesta**:\n",
+    "La diferencia principal entre estas arquitecturas son los elementos que tienen éstas,\n",
+    "las encoder-decoder con RNN tiene dos redes neuronales recurrentes conectadas\n",
+    "de forma para codificar un input usando una red y decodificar el output con otra red.\n",
+    "La arquitectura Encoder-Decoder RNN + Attentión, utiliza el mismo modelo anterior, salvo\n",
+    "que utiliza un mecanismo de \"atención\", de aprender qué estados ocultos son importantes para\n",
+    "el decoder, modelando así la importancia del contexto de un texto. Finalmente la arquitectura\n",
+    "Transformer es utilizar únicamente el mecanismo de atención con el input. "
    ]
   },
   {
@@ -138,7 +154,11 @@
    "source": [
     "**Pregunta 3**: ¿Cúal es el principal diferencia entre los Embeddings contextualizados (por ejemplo BERT) vs. los Embeddings estáticos (por ejemplo Word2Vec)? (1,5 puntos)\n",
     "\n",
-    "**Respuesta**: \n"
+    "**Respuesta**: La principal diferencia está que para una determinada palabra los embeddings estáticos tienen\n",
+    "un único vector que la representa, esto puede llevar que palabras con múltiples significados según su contexto\n",
+    " tengan un único valor asociado lo que puede llevar a errores si los significados distintos suelen ser muy muy distintos.\n",
+    " Los Embeddings contextualizados, por ende, buscan tener una infinidad de vectores asociados a una palabra determinada\n",
+    " según las palabras que la rodean, para darle un buen sentido a la palabra que se está utilizando."
    ]
   },
   {
@@ -150,7 +170,10 @@
    "source": [
     "**Pregunta 4**: Explique en que tareas y las arquitecturas con las que se entrenan ELMO y BERT (1,5 puntos)\n",
     "\n",
-    "**Respuesta**: "
+    "**Respuesta**: ELMO se entrena por medio de la tarea de Language Modelling (dado un texto predecir la siguiente palabra)\n",
+    "y se utiliza RNN LSTM para ser entrenada.\n",
+    "\n",
+    "BERT se resuelve la tarea por medio de resolver Next Sentence Prediction (determinar dado dos oraciones si una oración puede ser la siguiente de la otra) y se utiliza la arquitectura de Transformers (más precisamente la parte del encoder) para ser entrenado"
    ]
   },
   {
@@ -193,6 +216,7 @@
    "source": [
     "!pip install transformers\n",
     "from transformers import BertTokenizer, BertForNextSentencePrediction, BertForMaskedLM, BertForQuestionAnswering\n",
+    "\n",
     "import torch"
    ],
    "execution_count": null,
