--- a/T2/Assignment_2_baseline.ipynb
+++ b/T2/Assignment_2_baseline.ipynb
@@ -142,7 +142,7 @@
     "\n",
     "\n",
     "\n",
-    "roponer algunos experimentos a hacer:\n",
+    "Proponer algunos experimentos a hacer:\n",
     "(cambiar el batch size, dimensiones de las capas, cambiar el tipo de\n",
     "RNN, cambiar el optimizer, usar una CRF loss, usar embeddings\n",
     "pre-entrenados, usar BERT??). Quizás podemos sugerir usar algo como\n",
@@ -254,10 +254,10 @@
     "Para cargar los datos y preprocesarlos usaremos la librería [`torchtext`](https://github.com/pytorch/text).\n",
     "En particular usaremos su módulo `data`, el cual según su documentación original provee: \n",
     "\n",
-    "    - Ability to describe declaratively how to load a custom NLP dataset that's in a \"normal\" format\n",
-    "    - Ability to define a preprocessing pipeline\n",
-    "    - Batching, padding, and numericalizing (including building a vocabulary object)\n",
-    "    - Wrapper for dataset splits (train, validation, test)\n",
+    "   - Ability to describe declaratively how to load a custom NLP dataset that's in a \"normal\" format\n",
+    "   - Ability to define a preprocessing pipeline\n",
+    "   - Batching, padding, and numericalizing (including building a vocabulary object)\n",
+    "   - Wrapper for dataset splits (train, validation, test)\n",
     "\n",
     "\n",
     "El proceso será el siguiente: \n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:24:52.392908Z",
@@ -284,9 +284,27 @@
     "colab_type": "code",
     "id": "27csY87GaSFO",
     "outputId": "fbabfb1c-3313-4413-94c1-e7189eb3c63d",
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "is_executing": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Collecting torchtext\n  Using cached https://files.pythonhosted.org/packages/f2/17/e7c588245aece7aa93f360894179374830daf60d7ed0bbb59332de3b3b61/torchtext-0.6.0-py3-none-any.whl\nCollecting six (from torchtext)\n  Downloading https://files.pythonhosted.org/packages/ee/ff/48bde5c0f013094d729fe4b0316ba2a24774b3ff1c52d924a8a4cb04078a/six-1.15.0-py2.py3-none-any.whl\nCollecting numpy (from torchtext)\n  Downloading https://files.pythonhosted.org/packages/c7/7d/ea9e28c3a99f50e77ee9a0e3759adb6537b2bb7a84aef27b8c0ddc431b48/numpy-1.19.1-cp38-cp38-win_amd64.whl (13.0MB)\nCollecting tqdm (from torchtext)\n  Downloading https://files.pythonhosted.org/packages/af/88/7b0ea5fa8192d1733dea459a9e3059afc87819cb4072c43263f2ec7ab768/tqdm-4.48.0-py2.py3-none-any.whl (67kB)\nCollecting sentencepiece (from torchtext)\n  Downloading https://files.pythonhosted.org/packages/3b/bf/59a8870c8709cd8c4e6bc5db2fae02f241cbcf36c6b4b4aa6730cd97e3bc/sentencepiece-0.1.91-cp38-cp38-win_amd64.whl (1.2MB)\nCollecting torch (from torchtext)\n  Using cached https://files.pythonhosted.org/packages/f8/02/880b468bd382dc79896eaecbeb8ce95e9c4b99a24902874a2cef0b562cea/torch-0.1.2.post2.tar.gz\nCollecting requests (from torchtext)\n  Downloading https://files.pythonhosted.org/packages/45/1e/0c169c6a5381e241ba7404532c16a21d86ab872c9bed8bdcd4c423954103/requests-2.24.0-py2.py3-none-any.whl (61kB)\nCollecting pyyaml (from torch->torchtext)\n  Downloading https://files.pythonhosted.org/packages/7b/1d/3cf27312e162ff8bf3a9ae8c7472bb28ca6ae7f86e7130c23b798ec4c12a/PyYAML-5.3.1-cp38-cp38-win_amd64.whl (219kB)\nCollecting idna<3,>=2.5 (from requests->torchtext)\n  Downloading https://files.pythonhosted.org/packages/a2/38/928ddce2273eaa564f6f50de919327bf3a00f091b5baba8dfa9460f3a8a8/idna-2.10-py2.py3-none-any.whl (58kB)\nCollecting chardet<4,>=3.0.2 (from requests->torchtext)\n  Using cached https://files.pythonhosted.org/packages/bc/a9/01ffebfb562e4274b6487b4bb1ddec7ca55ec7510b22e4c51f14098443b8/chardet-3.0.4-py2.py3-none-any.whl\nCollecting urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 (from requests->torchtext)\n  Downloading https://files.pythonhosted.org/packages/9f/f0/a391d1463ebb1b233795cabfc0ef38d3db4442339de68f847026199e69d7/urllib3-1.25.10-py2.py3-none-any.whl (127kB)\nCollecting certifi>=2017.4.17 (from requests->torchtext)\n  Downloading https://files.pythonhosted.org/packages/5e/c4/6c4fe722df5343c33226f0b4e0bb042e4dc13483228b4718baf286f86d87/certifi-2020.6.20-py2.py3-none-any.whl (156kB)\nInstalling collected packages: six, numpy, tqdm, sentencepiece, pyyaml, torch, idna, chardet, urllib3, certifi, requests, torchtext\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "name": "stderr",
+     "text": [
+      "ERROR: Could not install packages due to an EnvironmentError: [Errno 13] Permission denied: 'c:\\\\program files\\\\python38\\\\Lib\\\\site-packages\\\\six.py'\nConsider using the `--user` option or check the permissions.\n\nWARNING: You are using pip version 19.2.3, however version 20.2 is available.\nYou should consider upgrading via the 'python -m pip install --upgrade pip' command.\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "# Instalar torchtext (en codalab) - Descomentar.\n",
     "!pip3 install --upgrade torchtext"
@@ -294,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:24:53.086354Z",
@@ -302,7 +320,10 @@
     },
     "colab": {},
     "colab_type": "code",
-    "id": "ng7wRGEyawjM"
+    "id": "ng7wRGEyawjM",
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -330,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:25:49.789218Z",
@@ -338,7 +359,10 @@
     },
     "colab": {},
     "colab_type": "code",
-    "id": "lbT0g_kC18Jb"
+    "id": "lbT0g_kC18Jb",
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -378,13 +402,15 @@
     "Williams I-PER\n",
     "```\n",
     "\n",
-    "Cada linea contiene una palabra y su clase. Para que `torchtext` pueda cargar estos datos, debemos definir como va a leer y separar los componentes de cada una de las lineas.\n",
-    "Para esto, definiremos un field para cada uno de esos componentes: Las palabras (`TEXT`) y los NER_TAGS (`clase`).\n"
+    "Cada linea contiene una palabra y su clase. Para que `torchtext` pueda cargar estos datos, \n",
+    "debemos definir como va a leer y separar los componentes de cada una de las lineas.\n",
+    "Para esto, definiremos un field para cada uno de esos componentes: Las palabras (`TEXT`) \n",
+    "y los NER_TAGS (`clase`).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:25:49.795126Z",
@@ -392,7 +418,10 @@
     },
     "colab": {},
     "colab_type": "code",
-    "id": "3DcM_IjgCdzz"
+    "id": "3DcM_IjgCdzz",
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -426,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:25:50.294370Z",
@@ -434,7 +463,10 @@
     },
     "colab": {},
     "colab_type": "code",
-    "id": "HsHdGml62J21"
+    "id": "HsHdGml62J21",
+    "pycharm": {
+     "is_executing": false
+    }
    },
    "outputs": [],
    "source": [
@@ -451,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:25:50.301354Z",
@@ -463,9 +495,20 @@
     },
     "colab_type": "code",
     "id": "Hu7q3HCliia5",
-    "outputId": "bd35465b-2204-47b6-bbe9-4062e0057246"
+    "outputId": "bd35465b-2204-47b6-bbe9-4062e0057246",
+    "pycharm": {
+     "is_executing": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Numero de ejemplos de entrenamiento: 8323\nNúmero de ejemplos de validación: 1915\nNúmero de ejemplos de test (competencia): 1517\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
    "source": [
     "print(f\"Numero de ejemplos de entrenamiento: {len(train_data)}\")\n",
     "print(f\"Número de ejemplos de validación: {len(valid_data)}\")\n",
@@ -484,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-06-23T22:25:50.317313Z",
@@ -497,9 +540,21 @@
     "colab_type": "code",
     "id": "T023Ld4RaSF4",
     "outputId": "b58559e0-bd4f-465e-9203-a472824dae58",
-    "scrolled": false
+    "scrolled": false,
+    "pycharm": {
+     "is_executing": false
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[('Ciudad', 'B-LOC'),\n ('del', 'I-LOC'),\n ('Vaticano', 'I-LOC'),\n (',', 'O'),\n ('23', 'O'),\n ('may', 'O'),\n ('(', 'O'),\n ('EFE', 'B-ORG'),\n (')', 'O'),\n ('.', 'O')]"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 8
+    }
+   ],
    "source": [
     "import random\n",
     "random_item_idx = random.randint(0, len(train_data))\n",
@@ -1813,6 +1868,15 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
